Opened 16 years ago

Closed 16 years ago

#3854 closed bug (fixed)

reindexed attributes do not persist across reboots.

Reported by: mmadia Owned by: axeld
Priority: high Milestone: R1/alpha1
Component: File Systems/BFS Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I took reindex from 30511 (or slightly newer) and dropped it into 30356. reindex -rv USER:BKP /boot. The files with that attribute will display as expected in a Tracker Query. On the next reboot only 1 file will display in the Tracker Query.

Change History (2)

comment:1 by axeld, 16 years ago

Milestone: R1R1/alpha1
Priority: normalhigh
Status: newassigned

The actual problem is that the entry is removed from the index - if you reopen the query another time in the same session, the other entries will already be gone.

comment:2 by axeld, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev30616.

Note: See TracTickets for help on using tickets.