* Fixed two bugs in BPlusTree::Remove(): it could update the tree iterators   incorrectly in case of duplicates. And also, more importantly, it did not   check if the entry to remove had the same value -- it would happily remove   any entry with the same attribute content. This could only happen in the   reindex case, though, and was the cause of bug #3854. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30616 a95241bf-73f2-0310-859d-f6bbb57e9c96